Begin converting formulas from MathJax to KaTeX

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 exclude: [Gemfile, Gemfile.lock]
 permalink: pretty
 excerpt_separator: <!--continue-->
-
+markdown: redcarpet2
+redcarpet:
+  extensions: ["no_intra_emphasis"]
