--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 exclude: [Gemfile, Gemfile.lock]
 permalink: pretty
 excerpt_separator: <!--continue-->
-markdown: redcarpet2
-redcarpet:
-  extensions: ["no_intra_emphasis"]
+markdown: kramdown
+kramdown:
+  parse_block_html: false
+  parse_span_html: false
